syntax = "proto3";
package canto.epochs.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Canto-Network/canto/v3/x/epochs/types";

message EpochInfo {
  string identifier = 1;
  google.protobuf.Timestamp start_time = 2 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];
  google.protobuf.Duration duration = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "duration,omitempty",
    (gogoproto.moretags) = "yaml:\"duration\""
  ];
  int64 current_epoch = 4;
  google.protobuf.Timestamp current_epoch_start_time = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"current_epoch_start_time\""
  ];
  bool epoch_counting_started = 6;
  int64 current_epoch_start_height = 7;
}

// GenesisState defines the epochs module's genesis state.
message GenesisState {
  repeated EpochInfo epochs = 1 [ (gogoproto.nullable) = false ];
}
